--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,6 +1,6 @@
 {%extends "base.html"%}
-{%block page_name%}Home
-{%endblock page_name%}
+{%block page_title%}{{room.name}}
+{%endblock page_title%}
 {% block content %}
 <div>
     <h1>{{room.name}}</h1>
@@ -8,28 +8,28 @@
 </div>
 <div>
     <h2>By: {{room.host.username}}
-    
-    {% if room.host.superhost %}
+
+        {% if room.host.superhost %}
         (superhost)
-    {% endif %}        
+        {% endif %}
     </h2>
     <h3>Amenities</h3>
     <ul>
-    {% for a in room.amenity.all %}
+        {% for a in room.amenity.all %}
         <li>{{a}}</li>
-    {% endfor %}
-    </ul> 
+        {% endfor %}
+    </ul>
     <h3>Facilities</h3>
     <ul>
-    {% for a in room.facility.all %}
+        {% for a in room.facility.all %}
         <li>{{a}}</li>
-    {% endfor %}
-    </ul> 
+        {% endfor %}
+    </ul>
     <h3>House Rules</h3>
     <ul>
-    {% for a in room.houserule.all %}
+        {% for a in room.houserule.all %}
         <li>{{a}}</li>
-    {% endfor %}
-    </ul>    
+        {% endfor %}
+    </ul>
 </div>
 {% endblock content %}
