--- a/templates/base.html
+++ b/templates/base.html
@@ -9,15 +9,19 @@
     <title>{% block page_title %}{% endblock page_title %}| Nbnb</title>
 </head>
 
-<body>
-    <header>
+<body class="text-gray-800 mt-24">
+    <header class="container max-w-full flex items-center inset-0 justify-between px-6 h-20 border-b border-gray-400 fixed bg-white">
+        <div class="flex items-center w-1/3">
+            <a href="{% url "core:home" %}" class="mr-6">
+                <img class="w-6" src="{% static 'img/air_bnb.png' %}"/>
+            </a>
+            {% block search-bar %}
+            <form method="get" action="{% url "rooms:search" %}" class="w-9/12">
+                <input class="search-box border w-full font-medium text-gray-800 placeholder-gray-600 px-4 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none" name="city" placeholder="Search by City" />
+            </form>
+            {% endblock search-bar %}
+        </div>
         {% include "partials/nav.html" %}
-
-        {% block search-bar %}
-        <form method="get" action="{% url "rooms:search" %}">
-            <input name="city" placeholder="Search by City" />
-        </form>
-        {% endblock search-bar %}
 
     </header>
 
