--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -8,12 +8,24 @@ Log In
 {% block search-bar %}
 {% endblock search-bar %}
 {% block content %}
-{% include 'partials/social_login.html' %}
-<form method="POST" action="{% url "users:login" %}">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button>Login</button>
-</form>
+
+    <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border border-gray-600 p-6">
+        {% include 'partials/social_login.html' %}
+
+
+        <form method="POST" action="{% url "users:login" %}" class="w-full">
+            {% csrf_token %}
+            <input type="email" placeholder="Email" class="mb-3">
+            <input type="password" placeholder="Password" class="mb-3">
+            <button class="btn bg-red-500 text-white">Login</button>
+        </form>
+
+        <div class="mt-5">
+            <span>Don't have account?</span>
+            <a href="{% url 'users:signup' %}" class="text-teal-500 font-medium">Sign up</a>
+        </div>
+    </div>
+
 
 
 {% endblock content %}
