--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,11 +2,11 @@
 @tailwind components;
 
 .search-box {
-  transition: box-shadow 0.5s linear;
+  transition: box-shadow 0.2s linear;
 }
 
 .nav_link {
-  @apply ml-8 border-b-2 border-white h-full flex items-center;
+  @apply ml-6 border-b-2 border-white h-full flex items-center;
   a {
     @apply py-10 px-5;
   }
@@ -19,10 +19,59 @@
   @apply text-center rounded-sm py-5 font-light text-lg w-full;
 }
 
-.input {
-  @apply btn text-left border border-gray-600 px-5;
+input {
+  @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
   &:focus {
     @apply outline-none border-teal-500;
+  }
+}
+
+form {
+  .input {
+    @apply mb-3;
+    &.has_error {
+      input {
+        @apply bg-red-200 border-gray-600;
+        &:focus {
+          @apply border-gray-600;
+        }
+      }
+    }
+  }
+}
+
+@keyframes messageFadeIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50px);
+  }
+  5% {
+    opacity: 1;
+    transform: translate(50px);
+  }
+  95% {
+    opacity: 1;
+    transform: translate(50px);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(-50px);
+  }
+}
+
+.message {
+  animation: messageFadeIn 5s ease-in-out forwards;
+  &.error {
+    @apply bg-red-600;
+  }
+  &.info {
+    @apply bg-blue-500;
+  }
+  &.success {
+    @apply bg-green-500;
+  }
+  &.warning {
+    @apply bg-yellow-400;
   }
 }
 
