--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 </head>
 
 <body class="text-gray-800 mt-24 font-light">
+    {% include "partials/messages.html" %}
     <header class="container max-w-full flex items-center inset-0 justify-between px-6 h-20 border-b border-gray-400 fixed bg-white">
         <div class="flex items-center w-1/3">
             <a href="{% url "core:home" %}" class="mr-6">
@@ -27,6 +28,8 @@
     </header>
 
     {% block content %}{% endblock content %}
+
+    
     {% include "partials/footer.html" %}
 
 </body>
