--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -9,19 +9,14 @@ Log In
 {% endblock search-bar %}
 {% block content %}
 
-    <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border border-gray-600 p-6">
+    <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
+
         {% include 'partials/social_login.html' %}
 
-
-        <form method="POST" action="{% url "users:login" %}" class="w-full">
-            {% csrf_token %}
-            <input type="email" placeholder="Email" class="mb-3">
-            <input type="password" placeholder="Password" class="mb-3">
-            <button class="btn bg-red-500 text-white">Login</button>
-        </form>
+        {% include 'mixins/auth/auth_form.html' with form=form cta="Log in" %}
 
         <div class="mt-5">
-            <span>Don't have account?</span>
+            <span class="mr-2">Don't have an account?</span>
             <a href="{% url 'users:signup' %}" class="text-teal-500 font-medium">Sign up</a>
         </div>
     </div>
